--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# mysql config
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/mfec
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
 
+# server
+server.port=8080
+
+# fly-way config
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.sql-migration-prefix=V
+spring.flyway.repeatable-sql-migration-prefix=R
+spring.flyway.sql-migration-separator=_
+spring.flyway.sql-migration-suffixes=.sql
+spring.flyway.baseline-on-migrate=true
