--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.flyway.repeatable-sql-migration-prefix=R
 spring.flyway.sql-migration-separator=_
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.baseline-on-migrate=true
+
+# JWT
+api.jwt.secret=m23as233b
+api.jwt.expired=15
